@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-08T01:42:37Z",
+  "timestamp" : "2022-08-09T16:24:34Z",
   "count_outdated" : 288,
   "uniques_outdated" : 175,
-  "count" : 290,
-  "uniques" : 177,
+  "count" : 294,
+  "uniques" : 180,
   "clones" : [
     {
       "timestamp": "2022-07-27T00:00:00Z",
@@ -18,6 +18,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-09T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
