@@ -1,6 +1,6 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 6,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-07-27T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2022-08-03T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-09T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
